--- a/13-learning-paths-available.qmd
+++ b/13-learning-paths-available.qmd
@@ -3,11 +3,11 @@ title: "Learning Paths Overview"
 format:
   html:
     toc: true
-    number-sections: false
+    number-sections: true
     theme: cosmo
 ---
 
-## 13. Learning paths available {#13.-learning-paths-available}
+##  Learning paths available 
 
 Here are some suggested learning paths:
 
@@ -33,7 +33,7 @@ Here are some suggested learning paths:
 |              | Term 3   |            |                       | 1                           | 3          | 3         |                               |
 | **Total Courses** |     | 8          | 14                    | 20                          | 31         |           | 31                            |
 
-## 13.1 Prerequisite course requirements {#13.1-prerequisite-course-requirements}
+##  Prerequisite course requirements {#13.1-prerequisite-course-requirements}
 
 ### Foundation courses {#foundation-courses}
 
